app/assets/stylesheets/styles.css.scss
body {
  /*background: asset-data-url("brick_bg.jpg") repeat fixed;*/
  background: asset-data-url("800px-Karnak_Temple_Interior.jpg") no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  background-position: center;
}

body.cronix {
  background: asset-data-url("Hider Website Cronix backgound.jpg") no-repeat center center fixed;
  /*background: url("https://c2.staticflickr.com/4/3089/3200167240_5e776e2bcb_z.jpg?zz=1") no-repeat center center fixed;*/
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

body.law {
  /*background: url("http://brazilianxd.com/wp-content/uploads/2014/01/galaxy17.jpg") no-repeat center center fixed;*/
  background: asset-data-url("Hider Website LOR background.jpg") no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

body.spiders {
  background: asset-data-url("Hider Website SoA background.jpg") no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

.wrapper {
  /*max-width: 940px;*/
  margin: 0 auto;
  /*background-color: rgba(0,0,0,0.7);*/
}

header {
  /*margin-top: 20px; only applies with navbar-static-top */
  margin-bottom: 150px;
  /*border-radius: 50px; does not apply here ... ?*/
  /*background-color: red; does not apply here ...?*/
}

.main {
  background-color: rgba(255,255,255,0.9);
  /*background-color: rgba(0,0,0,0.9);*/
}

h2 {
  margin-bottom: 20px;
  text-align: center;
  color: white;
}

.navbar-color {
  background: -moz-linear-gradient(left,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.3) 46%, rgba(0,0,0,0.65) 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(0,0,0,0)), color-stop(46%,rgba(0,0,0,0.3)), color-stop(100%,rgba(0,0,0,0.65))); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(left,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.3) 46%,rgba(0,0,0,0.65) 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(left,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.3) 46%,rgba(0,0,0,0.65) 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(left,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.3) 46%,rgba(0,0,0,0.65) 100%); /* IE10+ */
  background: linear-gradient(to right,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.3) 46%,rgba(0,0,0,0.65) 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=1 ); /* IE6-9 */
}

.left {
  float: left;
  width: 35%;
  margin-left: 20px;
  /*margin-right: 5%;*/
  /*background: darkgrey;*/
}

.right {
  float: right;
  width: 45%;
  margin-right: 20px;
  color: white;
  text-align: justify;
  background-color: black;
  padding-top: 10px;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 10px;
  border: 1px solid white;
}


img {
  /*max-width: 90%;*/
  max-width: 100%;
  border: 1px solid white;
  /*border-left: 20%;*/
}

.img_medium {
  width: 50%;
  /*border: 1px solid red;*/
  border-radius: 100%;
}

.img_cronix {
  width: 30%;
  height: 55%;
  border: 1px solid white;
  margin-bottom: 30px;
  margin-left: 35%;
}

.img_spiders {
  width: 30%;
  height: 55%;
  border: 1px solid white;
  margin-bottom: 30px;
  margin-left: 5%;
  float: left;
  background-color: rgba(0,0,255,0.5);
}

.blurbs {
  color: black;
}

.blurbs p {
  font-style: italic;
  color: white;
}

.img_container {
  width: 220px;
  height: 220px;
  margin: 5px;
}

.thumb {
  float: left;
  width: 70px;
  height: 70px;
  margin-left: 5px;
  margin-bottom: 5px;
}

.bookdata td a {
  padding: 3px 10px;
  margin-right: 20px;
  background-color: rgba(0,0,0,0.1);
}

ul {
  list-style-type: none;
  margin: 0;
}

.bookstores li {
  margin: 5px;
  padding: 5px;
  background: red;
}

.spidersquotes {
  margin-left: 400px;
  margin-right: 40px;
  color: white;
  font-size: 9pt;
  font-weight: 20;
  text-align: justify;
  background-color: rgba(0,0,0,0.25);
  padding-top: 20px;
  padding-right: 20px;
  padding-bottom: 20px;
  padding-left: 20px;
}

.span4 {
  /*float: right;*/
  margin-left: 50px;
  padding-top: 20px;
  padding-right: 20px;
  padding-bottom: 20px;
  padding-left: 20px;
  text-align: justify;
  color: white;
  background-color: rgba(0,0,0,0.25);
}

.span4 a {
color: yellow;
}

.span6 {
  float: right;
  margin-left: 30px;
  padding-top: 20px;
  padding-right: 20px;
  padding-bottom: 20px;
  padding-left: 20px;
  text-align: justify;
  color: white;
  background-color: rgba(0,0,0,0.25);
}

.span8 {
  float: right;
  padding-top: 20px;
  padding-right: 20px;
  padding-bottom: 20px;
  padding-left: 20px;
  text-align: justify;
  color: white;
  background-color: black;
}

.span10 {
  /*float: center;*/
  padding-top: 20px;
  padding-right: 20px;
  padding-bottom: 20px;
  padding-left: 20px;
  text-align: justify;
  color: white;
  background-color: rgba(0,0,0,0.5);
}

.span12 {
  padding-top: 20px;
  padding-right: 20px;
  padding-bottom: 20px;
  padding-left: 20px;
  text-align: justify;
  color: white;
  background-color: black;
}

footer {
  margin-top: 50px;
  margin-bottom: 20px;
  border-radius: 0 0 50px 50px;
  background-color: rgba(255,0,0,0.9);
  height: 50px;
  text-align: center;
  padding-top: 10px;
}

